Added all the functionalities to the website including signin and register

--- a/src/components/FaceRecognition/FaceRecognition.scss
+++ b/src/components/FaceRecognition/FaceRecognition.scss
@@ -1,9 +1,19 @@
-.face-outer-container{
-    margin: auto;
+// .face-outer-container{
+//     // margin: auto;
 
-.face-inner-container{
-    position: absolute;
-    margin-top: 20px;
-    
-}
-}
+    .bounding-box{
+        position: absolute;
+        box-shadow: 0 0 0 3px #149df2 inset;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        cursor: pointer;
+    }
+// .face-inner-container{
+//     // position: absolute;
+//     // margin-top: 20px;
+
+  
+// }
+
+// }
